<resources>
    <string name="app_name">TeluKids</string>
    <string name="password_at_least_8_characters">Password (at least 8 characters)</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="last_name">Last Name</string>
    <string name="todo">TODO</string>
    <string name="first_name">First Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_basic_concepts">BasicConcepts</string>
    <string name="title_activity_triangle_page3">TrianglePage3</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>