<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundSU"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/linearLayout1SU"
        android:layout_width="371dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.5">

        <ImageButton
            android:id="@+id/backbtnSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/subtnback"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,DuplicateSpeakableTextCheck" />

        <ImageView
            android:id="@+id/logoSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/teluiconsmall" />

        <ImageView
            android:id="@+id/signupSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/sutxtsignup"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:id="@+id/linearLayout2SU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1SU"
            app:layout_constraintVertical_bias="0.0">

            <EditText
                android:id="@+id/firstnameSU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/suhdrfirstname"
                android:fontFamily="@font/leaguespartan_bold"
                android:hint="@string/first_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="15sp"
                android:textColorHint="#D3CEB5"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

            <Space
                android:layout_width="5dp"
                android:layout_height="35dp" />

            <EditText
                android:id="@+id/lastnameSU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/suhdrlastname"
                android:fontFamily="@font/leaguespartan_bold"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="15sp"
                android:textColorHint="#D3CEB5"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/emailaddressSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/suhdremailadd"
            android:ems="10"
            android:fontFamily="@font/leaguespartan_bold"
            android:hint="@string/email_address"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="15sp"
            android:textColorHint="#D3CEB5"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/usernameSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/suhdrusername"
            android:ems="10"
            android:fontFamily="@font/leaguespartan_bold"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingHorizontal="15sp"
            android:textColorHint="#D3CEB5"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/passwordSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/suhdrpwd"
            android:ems="10"
            android:fontFamily="@font/leaguespartan_bold"
            android:hint="@string/password_at_least_8_characters"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="15sp"
            android:textColorHint="#D3CEB5"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/confirmpasswordSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:background="@drawable/suhdrconpwd"
            android:ems="10"
            android:fontFamily="@font/leaguespartan_bold"
            android:hint="@string/confirm_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingHorizontal="15sp"
            android:textColorHint="#D3CEB5"
            android:textSize="12sp"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/errormsgSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/leaguespartan_bold"
            android:gravity="center_horizontal"
            android:shadowColor="#29000000"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textColor="#E9724C" />

        <ImageButton
            android:id="@+id/signupbtnSU"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/todo"
            android:foregroundGravity="center_horizontal"
            app:srcCompat="@drawable/subtnsignup"
            tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>